<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.DetailFragment.DetailFragment">

    <TextView
        android:id="@+id/textViewDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/addmode"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_titleModeDetail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/title_mode"
        app:layout_constraintBottom_toTopOf="@+id/et_titleAppDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDetail" />


    <EditText
        android:id="@+id/et_titleAppDetail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/name_appCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_titleModeDetail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearchDetail"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/searchCreate"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/rv_appsDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_titleAppDetail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_appsDetail"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_titleAppDetail"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_app_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateDetail"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/update"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnSearchDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/et_titleModeDetail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteDetail"
        android:layout_width="88dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/delete_detail"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>